--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "dependencies": {
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "express-async-handler": "^1.1.4",
     "express-validation": "^1.0.2",
     "joi": "^14.3.1",
     "mongoose": "^5.5.8",
     "mongoose-paginate": "^5.0.3",
-    "require-dir": "^1.2.0"
+    "require-dir": "^1.2.0",
+    "youch": "^2.0.10"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
